--- a/Html_Hello_world.html
+++ b/Html_Hello_world.html
@@ -1,7 +1,12 @@
 <!DOCTYPE_HTML>
 <meta charset="UTF-8">
 <html>
-  <head></head>
-  <body> <p>Hello World!</p> </body>
+  <head>
+    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨Css_hello_world.css¨>
+    <script src="Javascript_hello_world.js"></script>
+  </head>
+  <body> 
+    <p class="hello-world">Hello World!</p> 
+  </body>
 </html>
                
